# api-bank-system

./: .gitignore  DOCUMENTAÇÃO.docx  README.md  config.py  database.py  main.py  pyproject.toml  security.py
controllers/: autenticacao.py  conta.py  transacao.py
models/: contas.py  transacao.py  usuarios.py
schemas/: autenticacao.py  contas.py  transacao.py
service/: autenticacao.py  contas.py  transacao.py
views/: autenticacao.py  contas.py  transacao.py
