[tool.poetry]
name = "api-bank-system"
version = "0.1.0"
description = ""
authors = [
    {name = "Itallo Polito",email = "itallomp@hotmail.com"}
]
package-mode = false
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pwdlib (>=0.3.0,<0.4.0)",
    "jwt (>=1.4.0,<2.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "bcrypt (==4.0.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
